# open62541demos

./: .gitmodules  README.md
open62541ping/: .gitignore  CMakeLists.txt  Makefile  Makefile.zephyr  build-all-zephyr.sh  build-open62541-zephyr.sh  client.c  prj.conf  run-zephyr-qemu.sh  server.c
